2019-10-09 Wiley E. Hill <wileyhill@gmail.com

    * scheme/gschem/gschem-tools-menu.scm: Translate tools:menu-items.

    * po/ru.po: Update Russian translations.

2019-10-07 Wiley E. Hill <wileyhill@gmail.com

    * scheme/gschem/gschem-tools-menu.scm: Add hot keys, "T V" to launch git,
      and explicitly map to icon "geda-text-editor" to "tools:open-editor".

    * src/guile/g_util.c: Revise show_uri to free uri.

2019-10-05 Wiley E. Hill <wileyhill@gmail.com

    * po/hu.po: Update Hungarian translations.
    * po/it.po: Update Italian translations.
    * po/ja.po: Update Japanese translations.
    * po/kh.po: Update Khmer translations.
    * po/ml.po: Updated Malayalam translations.
    * po/nl.po: Update Dutch translations.
    * po/pl.po: Update Polish translations.
    * po/pt.po: Update Portuguese translations.
    * po/pt_BR.po: Update Brazilian Portuguese translations.

2019-10-04 Wiley E. Hill <wileyhill@gmail.com

    * etc/system-gschemrc.scm: Mark "Draw Order" menu as translatable. Replace
      apostrophe quote, 0x27, with grave accent, 0x60, so that the translation
      no-op macros are evaluated.

    * scheme/gschem/gschem-export-menu.scm: Flag Export menu item and menu-items
      as translatable. Replace apostrophe quote, 0x27, with grave accent, 0x60,
      so that the translation no-op macros are evaluated.

    * scheme/gschem/gschem-tools-menu.scm: Add hot keys, "T E" to launch the
      text editor. Replace apostrophe quote, 0x27, with grave accent, 0x60, so
      that the translation no-op macros are evaluated.

    * gschem/src/iface/i_command.c: Clean up code a bit in do_documentation.

2019-10-03 Wiley E. Hill <wileyhill@gmail.com

    * gschem/src/iface/i_command.c: Remove unnecessary initialization of
      GError in do_documentation.

2019-09-28 Wiley E. Hill <wileyhill@gmail.com

    * po/af.po: Update Afrikaans translations.
    * po/ar.po: Update Arabic translations.
    * po/bg.po: Update Bulgarian translations.