@@ -243,22 +243,22 @@
 ;;    menu item name             menu action             menu stock icon menu    Menu Item Tooltip
 ;;
   `(
-    ((N_ "_Symbols")            #f                          "geda-component"     "Tool for symbol files")
+    (,(N_ "_Symbols")            #f                          "geda-component"     "Tool for symbol files")
     ("SEPARATOR"                #f                     #f)
-    ((N_ "_Open Editor")         tools:open-editor          "geda-text-editor"   "Open text editor")
+    (,(N_ "_Open Editor")         tools:open-editor          "geda-text-editor"   "Open text editor")
 
-    ((N_ "Run DRC 1")            tools:run-drc              "geda-check-grn"     "Launch design rule checker 1")
-    ((N_ "Run DRC 2")            tools:run-drc2             "geda-check-org"     "Launch design rule checker 2")
-    ((N_ "Version Control")      tools:open-gitclient       "git-logo"           "Launch version system")
-    ((N_ "Bill of Materials")    tools:run-bom              "gaf-bom"            "Generate a BOM")
+    (,(N_ "Run DRC 1")            tools:run-drc              "geda-check-grn"     "Launch design rule checker 1")
+    (,(N_ "Run DRC 2")            tools:run-drc2             "geda-check-org"     "Launch design rule checker 2")
+    (,(N_ "Version Control")      tools:open-gitclient       "git-logo"           "Launch version system")
+    (,(N_ "Bill of Materials")    tools:run-bom              "gaf-bom"            "Generate a BOM")
 
     ("SEPARATOR"                #f                     #f)
-    ((N_ "gEDA netlist")         tools:geda-netlist         "gschem-net")
-    ((N_ "S_pice netlist")      #f                          "geda-wave"          "Generate spice netlists")
+    (,(N_ "gEDA netlist")         tools:geda-netlist         "gschem-net")
+    (,(N_ "S_pice netlist")      #f                          "geda-wave"          "Generate spice netlists")
     ("SEPARATOR"                #f                     #f)
-    ((N_ "VHDL netlist")         tools:vhdl-sch-netlist     "geda-simulate")
-    ((N_ "Verilog netlist")      tools:verilog-netlist      "geda-verilog-blue")
-    ((N_ "hierarchy Verilog")    tools:gnet_hier_verilog    "geda-verilog-grn")
+    (,(N_ "VHDL netlist")         tools:vhdl-sch-netlist     "geda-simulate")
+    (,(N_ "Verilog netlist")      tools:verilog-netlist      "geda-verilog-blue")
+    (,(N_ "hierarchy Verilog")    tools:gnet_hier_verilog    "geda-verilog-grn")
   )
 )
 
